[gd_scene load_steps=3 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/title/Multiplayer.gd" type="Script" id=2]

[node name="Multiplayer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -39.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 354.0
margin_bottom = 157.0

[node name="Text" type="Label" parent="Margin/VBox"]
margin_right = 354.0
margin_bottom = 12.0
size_flags_vertical = 1
text = "Multiplayer has been discontinued..."
autowrap = true

[node name="IPs" type="Label" parent="Margin/VBox"]
visible = false
margin_top = 16.0
margin_right = 354.0
margin_bottom = 28.0
clip_text = true

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -26.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 1 )

[node name="Host" type="Button" parent="HBox"]
margin_right = 68.0
margin_bottom = 21.0
text = "Host Game"

[node name="Join" type="Button" parent="HBox"]
margin_left = 72.0
margin_right = 136.0
margin_bottom = 21.0
text = "Join Game"

[node name="Close" type="Button" parent="HBox"]
margin_left = 140.0
margin_right = 179.0
margin_bottom = 21.0
theme = ExtResource( 1 )
text = "Close"

[node name="LineEdit" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 175.0
margin_bottom = -5.0
text = "127.0.0.1"

[node name="Tween" type="Tween" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_Multiplayer_visibility_changed"]
[connection signal="button_up" from="HBox/Host" to="." method="_on_Host_button_up"]
[connection signal="button_up" from="HBox/Join" to="." method="_on_Join_button_up"]
[connection signal="button_up" from="HBox/Close" to="." method="_on_Close_button_up"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
